--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
 streamlit>=1.26.0
+plotly
+os
+numpy
+pandas
+matplotlib
+seaborn
+math
+datetime
+calendar
+itertools
+statsmodels
+scikit-learn
+pmdarima
+warnings
